--- a/css/styles.css
+++ b/css/styles.css
@@ -11,13 +11,15 @@
   --accent-color: #2196f3;
   --primary-white-color: #ffffff;
   --bcg-color: #2f303a;
-  --bcg-color-hero: #C4C4C4;
+  --bcg-color-hero: #c4c4c4;
   --secondary-bcg-color: #f5f4fa;
   --active-btn: #188ce8;
   --footer-contact-color: rgba(255, 255, 255, 0.6);
   --header-border-color: #ececec;
   --filter-border-color: #eeeeee;
   --icon-fill-color: #afb1b8;
+
+  --transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -116,6 +118,8 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
+
+  transition: color 250ms var(--transition-timing-function);
 }
 
 .site-nav .link:hover,
@@ -124,7 +128,21 @@ body {
 }
 
 .site-nav .link.current {
+  position: relative;
   color: var(--accent-color);
+}
+
+.site-nav .link.current::after {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  border-radius: 2px;
 }
 
 .contact-us {
@@ -149,6 +167,9 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
+
+  transition: color 250ms var(--transition-timing-function),
+    fill 250ms var(--transition-timing-function);
 }
 
 .contact-us .link:hover,
@@ -213,6 +234,8 @@ body {
   letter-spacing: 0.06em;
   text-align: center;
   cursor: pointer;
+
+  transition: background-color 250ms var(--transition-timing-function);
 }
 
 .button:hover,
@@ -236,6 +259,11 @@ body {
   text-align: center;
 
   cursor: pointer;
+
+  transition: color 250ms var(--transition-timing-function),
+    background-color 250ms var(--transition-timing-function),
+    box-shadow 250ms var(--transition-timing-function),
+    text-shadow 250ms var(--transition-timing-function);
 }
 
 .button-filter:hover,
@@ -243,7 +271,8 @@ body {
 .button-filter:active {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -312,6 +341,30 @@ body {
   gap: 30px;
 }
 
+.activity-item {
+  position: relative;
+}
+
+.activity-item .description {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
+.activity-item .text-description {
+  margin: 0;
+  padding: 27px 0;
+  font-weight: 700;
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
+
+  color: var(--primary-white-color);
+}
+
 img {
   display: block;
 }
@@ -365,11 +418,16 @@ img {
 .social-list .link {
   height: 44px;
   width: 44px;
+  border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
   fill: var(--icon-fill-color);
   font-size: 0;
+
+  transition: fill 250ms var(--transition-timing-function),
+    background-color 250ms var(--transition-timing-function),
+    border-radius 250ms var(--transition-timing-function);
 }
 
 .social-item .item-icon {
@@ -407,6 +465,9 @@ img {
   border: 1px solid #afb1b8;
   border-radius: 4px;
   font-size: 0;
+
+  transition: fill 250ms var(--transition-timing-function),
+    border-color 250ms var(--transition-timing-function);
 }
 
 .clients-list .link:hover,
@@ -439,6 +500,8 @@ img {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-decoration: none;
+
+  transition: color 250ms var(--transition-timing-function);
 }
 
 .address .item:not(:first-child) {
@@ -479,12 +542,13 @@ img {
   border-radius: 50%;
   fill: var(--primary-white-color);
   font-size: 0;
+
+  transition: background-color 250ms var(--transition-timing-function);
 }
 
 .footer .social-item .link:hover,
 .footer .social-item .link:focus {
   background-color: var(--accent-color);
-  border-radius: 50%;
 }
 
 /* Сторінка портфоліо */
@@ -518,12 +582,48 @@ img {
 .project-link {
   display: block;
   text-decoration: none;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.project-list .project-thumb{
+  position: relative;
+  overflow: hidden;
+}
+
+.project-overlay {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+  justify-content: center;
+  align-items: center;
+
+  transform: translateY(100%);
+  opacity: 0;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.overlay-description {
+  padding: 25px;
+  margin: 0;
+  font-size: 18px;
+  line-height: 1.55;
+  color: var(--primary-white-color);  
 }
 
 .project-link:hover,
 .project-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.project-link:hover .project-overlay{
+  transform: translateY(0);
+  opacity: 1;
 }
 
 .project-list .description {
@@ -536,4 +636,69 @@ img {
   color: var(--primary-text-color);
   font-size: 16px;
   line-height: 1.88;
+}
+
+/* Модальне вікно */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+
+  opacity: 1;
+
+  transition: opacity 250ms ease;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(1.2);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  display: flex;
+  min-height: 580px;
+  min-width: 530px;
+  padding: 10px;
+
+  background-color: var(--primary-white-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+  transform: translate(-50%, -50%) scale(1);
+
+  transition: transform 250ms ease;
+}
+
+.modal .icon {
+  width: 11px;
+  height: 11px;
+}
+
+.button-close-modal {
+  display: block;
+  height: 30px;
+  width: 30px;
+  margin-left: auto;
+  padding: 6px;
+
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+  fill: #000000;
+  background-color: var(--primary-white-color);
+
+  cursor: pointer;
 }
